tests/incremental_mixed_naming_cycle/incremental_mixed_naming_cycle.exp
Error: a.js:6
  6: (require('./b'): void);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  6: (require('./b'): void);
                      ^^^^ undefined

Error: a.js:7
  7: (require('C'): void);
      ^^^^^^^^^^^^ string. This type is incompatible with
  7: (require('C'): void);
                    ^^^^ undefined

Error: b.js:6
  6: (require('A'): void);
      ^^^^^^^^^^^^ string. This type is incompatible with
  6: (require('A'): void);
                    ^^^^ undefined

Error: b.js:7
  7: (require('D'): void);
      ^^^^^^^^^^^^ string. This type is incompatible with
  7: (require('D'): void);
                    ^^^^ undefined

Error: c.js:7
  7: (require('./b'): void);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  7: (require('./b'): void);
                      ^^^^ undefined

Error: d.js:6
  6: (require('./b'): void);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  6: (require('./b'): void);
                      ^^^^ undefined


Found 6 errors
Error: a.js:6
  6: (require('./b'): void);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  6: (require('./b'): void);
                      ^^^^ undefined

Error: a.js:7
  7: (require('C'): void);
      ^^^^^^^^^^^^ string. This type is incompatible with
  7: (require('C'): void);
                    ^^^^ undefined

Error: b.js:6
  6: (require('A'): void);
      ^^^^^^^^^^^^ string. This type is incompatible with
  6: (require('A'): void);
                    ^^^^ undefined

Error: b.js:7
  7: (require('D'): void);
      ^^^^^^^^^^^^ string. This type is incompatible with
  7: (require('D'): void);
                    ^^^^ undefined

Error: c.js:7
  7: (require('./b'): void);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  7: (require('./b'): void);
                      ^^^^ undefined

Error: d.js:6
  6: (require('./b'): void);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  6: (require('./b'): void);
                      ^^^^ undefined


Found 6 errors
